Tested the Hibernate JPA component. It is now fully functional. I think.
Generated the necessary JavaDoc documentation for the component.

Changed the way HibernateManager works. Now it is a Singleton with Lazy Initialization. This way its lifecycle (opening and closure) is controlled from the same place it is initialized, and not in two different places like before.